styles/style.css
::before,
::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 16px;
  line-height: 1.2;
}


.page {
  max-width: 1100px;
  margin: 0 auto;
}

/* ШАПКА */

.header {
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  align-items: center;
  padding-top: 92px;
  padding-bottom: 92px;
  padding-left: 50px;
  padding-right: 50px;
}

.header__links-list {
  display: flex;
  gap: 32px;
  list-style: circle;
  margin: 0;
  padding: 0;
}

.header__links-list-item_no-bullit {
  list-style: none;
}

.header__link {
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 18px;
  line-height: 21px;
  color: black;
  text-decoration: underline;
}

.header__link_active {
  text-decoration: none;
}

.header__logo {
  width: 148px;
  display: block;
  justify-self: center;
}

/*  АДРЕС  */

.address {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 18px;
  font-style: normal;
  line-height: 24px;
  color: black;
}

.address a {
  color: black;
}

.address p {
  margin: 0;
}

.header__address {
  justify-self: end;
  max-width: 240px;
}

/*  ОБЛОЖКА  */

.cover {
  position: relative;
  min-height: 757px;
  box-sizing: border-box;
  background-image: url(../images/cover.jpg);
  background-size: cover;
  background-position: center;
  padding-top: 165px;
  padding-left: 50px;
  padding-right: 50px;
  padding-bottom: 50px;
}

.overlay {
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 1;
}

/*  Заголовок  */

.cover__title {
  position: relative;
  color: white;
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 100px;
  line-height: 115px;
  text-transform: uppercase;
  letter-spacing: normal;
  margin: 0 0 135px 0;
  z-index: 2;
}

.aligned-text {
  display: block;
  letter-spacing: 0.3em;
}

.aligned-text_center {
  text-align: center;
}

.aligned-text_right {
  text-align: right;
}

/*  Описание текста и кнопка  */

.cover__description {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: auto;
  padding-bottom: 10px;
  z-index: 2;
}

.cover__description-text {
  font-family: 'Raleway', Arial, sans-serif;
  word-spacing: 18px;
  color: white;
  font-size: 22px;
  line-height: 28px;
  letter-spacing: 1px;
}

.bet-button {
  background-color: transparent;
  border: 1px solid white;
  color: white;
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 22px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 32px;
  padding-right: 32px;
  text-transform: uppercase;
  cursor: pointer;
}

/*  ЛОТЫ  */

.lots {
  padding-top: 180px;
  padding-left: 50px;
  padding-right: 50px;
  padding-bottom: 50px;
}

.lots__heading {
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 40px;
  text-transform: uppercase;
  margin: 0 0 27px 40px;
}

.lots__card-list {
  display: flex;
  gap: 25px;
  flex-wrap: wrap;
  list-style: none;
  margin: 0;
  margin-bottom: 30px;
  padding-left: 0;
}

.lots__card-list-item {
  width: calc((100% - 50px) / 3);
  min-height: 563px;
}

/*  КАРТОЧКИ  */

.card-link {
  text-decoration: none;
  display: block;
}

.card {
  height: 100%;
  position: relative;
  min-height: 563px;
  padding-top: 51px;
  padding-left: 40px;
  padding-right: 40px;
  padding-bottom: 48px;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.card::before {
  content: "";
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.6);
}

.card_type_film {
  background-image: url("../images/card-lot-01.jpg");
}

.card_type_book {
  background-image: url("../images/card-lot-02.jpg");
}

.card_type_picture {
  background-image: url("../images/card-lot-03.jpg");
}

.card__title {
  position: relative;
  z-index: 2;
  color: white;
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 22px;
  line-height: 26px;
  text-transform: uppercase;
  text-decoration: underline;
  margin: 0;
}

.card__text {
  position: relative;
  z-index: 2;
  color: white;
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 20px;
  line-height: 24px;
  margin: 0;
}

/*  Ссылка  */

.lots__look-more-link {
  font-family: 'Raleway', Arial, sans-serif;
  color: black;
  font-size: 20px;
  text-decoration: underline;
}

/*  ОБ АУКЦИОНЕ  */

.about {
  display: grid;
  grid-template-columns: 334px 1fr;
  gap: 25px;
  padding: 180px 50px 50px;
}

.about__column {
  display: flex;
  flex-direction: column;
}

.about__logo {
  width: 240px;
  height: 240px;
  background-color: black;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.about__logo-image {
  width: 148px;
}

.about__title {
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 40px;
  text-transform: uppercase;
  margin-bottom: 100px;
}

.about__text {
  display: flex;
  flex-direction: column;
  gap: 25px;
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 20px;
}

.about__text p {
  margin: 0;
}

/*  Подвал Сайта */

.footer {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  padding: 180px 50px 90px;
  align-items: start;
}

.footer__address {
  max-width: 240px;
}

.footer__links-list {
  list-style: none;
  padding: 0;
  margin: 0;
  text-align: center;
}

.footer__link {
  font-family: 'Raleway', Arial, sans-serif;
  font-size: 18px;
  text-decoration: underline;
  color: black;
}

.footer__link-active {
  text-decoration: none;
}

.footer__social-list {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: flex-end;
  gap: 48px;
}

.footer__social-icon {
  width: 48px;
}

